# leanstore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  C.csv  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  codestyle.xml  res
backend/: CMakeLists.txt
backend/leanstore/: BTreeAdapter.hpp  Config.cpp  Config.hpp  DebuggingCounters.cpp  DebuggingCounters.hpp  KVInterface.hpp  LeanStore.cpp  LeanStore.hpp
backend/leanstore/concurrency/: BlockedRange.hpp  ConnectedIoChannel.cpp  ConnectedIoChannel.hpp  Mean.cpp  Mean.hpp  MessageHandler.cpp  MessageHandler.hpp  Task.cpp  Task.hpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskManager.cpp  TaskManager.hpp  ThreadBase.cpp  ThreadBase.hpp  ThreadingManager.cpp  ThreadingManager.hpp  YieldLock.cpp  YieldLock.hpp
backend/leanstore/concurrency-recovery/: CRMG.cpp  CRMG.hpp  ConcurrencyControl.cpp  GroupCommitCordinator.cpp  GroupCommiter.cpp  GroupCommiter.hpp  GroupCommiter1.cpp  GroupCommiter2.cpp  GroupCommiter3.cpp  HistoryTree.cpp  HistoryTree.hpp  HistoryTreeInterface.hpp  Logging.cpp  Partition.cpp  Partition.hpp  SMTC.cpp  SMTC.hpp  SMTCInterface.hpp  Transaction.hpp  VersionsSpace.cpp  VersionsSpace.hpp  VersionsSpaceInterface.hpp  VersionsSpaceSTD.cpp  VersionsSpaceSTD.hpp  WAL.cpp  WAL.hpp  WALEntry.hpp  WALWriter.cpp  WALWriter.hpp  Worker.cpp  Worker.hpp
backend/leanstore/counters/: CPUCounters.cpp  PPCounters.cpp  PPCounters.hpp  ThreadCounters.cpp  ThreadCounters.hpp  WorkerCounters.cpp  WorkerCounters.hpp
backend/leanstore/io/: DeviceInterface.hpp  IoAbstraction.cpp  IoAbstraction.hpp  IoChannel.cpp  IoChannel.hpp  IoInterface.cpp  IoInterface.hpp  IoOptions.hpp  IoRequest.cpp  IoRequest.hpp  Raid.hpp  RequestStack.hpp
backend/leanstore/sync-primitives/: JumpMU.cpp  JumpMU.hpp  Latch.hpp  OptimisticLock.cpp  OptimisticLock.hpp  PageGuard.hpp  PlainGuard.hpp
backend/leanstore/threads/: UT.cpp  UT.hpp
backend/leanstore/tx/: TXMG.cpp  TXMG.hpp  TransactionManager.cpp  TransactionManager.hpp
backend/leanstore/utils/: CpuTopology.cpp  CpuTopology.hpp  FNVHash.cpp  FNVHash.hpp  FVector.hpp  Files.cpp  Files.hpp  GenericRandom.hpp  Hist.hpp  JNI.cpp  JNI.hpp  JumpMU.cpp  JumpMU.hpp  MMapVector.cpp  Misc.cpp  Misc.hpp  simd.hpp  (+22 more)
benchmark/: CMakeLists.txt
benchmark/main/: leanstore_mixed.cc  leanstore_tatp.cc  leanstore_tpcc.cc  leanstore_webserver.cc
benchmark/micro/: aio.cc  bitmap.cc  compress.cc  free_pages.cc  queue.cc  rdtsc.cc  search.cc  sha2.cc  sparse_pte.cc
frontend/: CMakeLists.txt  frontend.cpp
frontend/iob/: Env.hpp  RequestGenerator.hpp  iob.cpp
frontend/memalloc/: memalloc.cpp
frontend/micro-benchmarks/: graveyard.cpp  queue.cpp
frontend/minimal-example/: main.cpp
frontend/minimalExample/: main.cpp  schema.hpp  workload.hpp
frontend/misc-benchmarks/: contention.cpp  cx16.cpp  debug.cpp  fairness.cpp  latest.cpp  merge.cpp  mvcc.cpp  random_io.cpp  replacement_strategy_test.cpp  scan.cpp  scheduler.cpp  seq.cpp  urls.cpp  ut.cpp  verifyrome.cpp  wal.cpp  zipf.cpp
frontend/mix/: bulk_loading.cpp
frontend/rdtsc/: rdtsc.cpp
frontend/ringbuffer/: ringbuffer.cpp
frontend/scaled-example/: main.cpp  workload.hpp
frontend/shared/: Adapter.hpp  GenericSchema.hpp  LMDBAdapter.hpp  LeanStoreAdapter.hpp  LeanStoreAdapterNC.hpp  RocksDBAdapter.hpp  Schema.hpp  Types.hpp  WiredTigerAdapter.hpp  adapter-leanstore.hpp  rocksdb.cpp  types.hpp
frontend/smalllist/: smalllist.cpp
frontend/spdkmicro/: spdkmicro.cpp
frontend/tpc-c/: LeanStoreAdapter.hpp  RocksDBAdapter.hpp  Schema.hpp  TPCCWorkload.hpp  Types.hpp  adapter.hpp  lmdb_tpcc.cpp  rocksdb_tpcc.cpp  schema.hpp  tpcc.cpp  tpcc_workload.hpp  types.hpp  wiredtiger_adapter.hpp  wiredtiger_tpcc.cpp
frontend/ycsb/: Schema.hpp  YcsbAdapter.hpp  deterministic.cpp  exp.cpp  lmdb_ycsb.cpp  rocksdb_ycsb.cpp  schema.hpp  wiredtiger_ycsb.cpp  ycsb.cpp
playground/: BTreeSlotted.cpp  BTreeSlotted.hpp  CMakeLists.txt  btree_sloted.cpp  libaio.cpp  playground.cpp
share_libs/fmt/: CMakeLists.txt
share_libs/lz4/: CMakeLists.txt
share_libs/sha256/: CMakeLists.txt  sha256_arm.cc  sha256_x86.cc
share_libs/typefold/: CMakeLists.txt  typefold.cc
share_libs/yyjson/: CMakeLists.txt
src/: CMakeLists.txt  config.cc  env.cc  leanstore.cc  statistics.cc
src/buffer/: alias_area.cc  buffer_manager.cc  resident_set.cc
src/common/: concurrent_queue.cc  queue.cc  rand.cc  sha256.cc  utils.cc  worker_pool.cc
src/leanstore/: LeanStore.cpp  LeanStore.hpp
src/recovery/: group_commit.cc  log_buffer.cc  log_manager.cc  log_worker.cc
src/storage/: aio.cc  free_page_manager.cc  free_storage.cc
src/sync/: epoch_handler.cc  hybrid_guard.cc  hybrid_latch.cc  page_state.cc  range_lock.cc
src/transaction/: transaction.cc  transaction_manager.cc
test/: CMakeLists.txt  main.cc
test/adapters/: test_filesystem_adapter.cc  test_leanstore_adapter.cc  test_rocksdb_adapter.cc  test_wiredtiger_adapter.cc
test/buffer/: test_buffer_manager.cc  test_resident_set.cc
test/common/: fuse.cc  test_queue.cc
test/fuse/: README.md  fuse.cc
test/recovery/: test_group_commit.cc  test_log_manager.cc
test/storage/: test_aio.cc
test/sync/: test_guard.cc  test_latch.cc  test_page_guard.cc  test_range_lock.cc
test/transaction/: test_transaction.cc
tests/: CMakeLists.txt  tester.cpp
tests/leanstore/: AsyncWriteBufferTest.cpp  BTreeTest.cpp  BufferManager.cpp  BufferManagerTest.cpp
tools/: BenchmarkMutex.cpp  CMakeLists.txt  btree_benchmark.cpp  caught_exceptions.cpp  cli.cpp  futex.cpp  io_benchmark.cpp  random_benchmark.cpp  tcp.cpp  tcp.csv  tx.cpp  txt_to_vector.cpp
tools/btree/: BTree.hpp  BTreePreAllocated.hpp  JumpMU.cpp  JumpMU.hpp  MemoryAllocator.hpp  Primitives.hpp
tools/btree-implementations/: btree_benchmark.cpp
tools/btree-legacy/: BTreeOptimistic.hpp  Common.hpp  OptimisticNode.hpp
tools/fast-uncaught-exception/: fast-uncaught-exception.cpp  fast-uncaught-exception.hpp
tools/micro-benchmarks/: aio.cpp  contention_effects.cpp  perf_test.cpp  signal.cpp  swapcontextopt.S
tools/morsel/: morsel.cpp
(+538 files in other folders)
